packages/rust/crates/qianji-bpmn-engine/tests/snapshots/bpmn_default_compensation_end_lint_report.snap
---
source: packages/rust/crates/qianji-bpmn-engine/tests/unit/lint/mod.rs
assertion_line: 35
expression: value
---
{
  "domain": "bpmn",
  "source_id": "invalid-default-compensation-end.bpmn",
  "ok": false,
  "issues": [
    {
      "code": "bpmn.unsupported_compensation_configuration",
      "severity": "error",
      "title": "Default compensation end events are deferred",
      "summary": "Process 'throw_compensation_flow' compensation node 'throw_end' uses `<endEvent><compensateEventDefinition /></endEvent>` without `activityRef`, which implies default compensation and is outside the bounded slice.",
      "why_it_failed": "The current engine does not execute default compensation from throwing end events. It only executes three bounded compensation shapes inside one transaction shell: explicit boundary-to-handler replay during transaction cancel, one synchronous targeted throw-compensation end event with explicit `activityRef`, and one synchronous targeted throw-compensation intermediate event with explicit `activityRef`.",
      "repair_guidance": [
        "If transaction rollback is really required, remodel the flow with one bounded transaction cancel path plus explicit compensation boundary-to-handler bindings on the completed activities.",
        "If the flow only needs terminal completion, remove `<compensateEventDefinition>` and keep an ordinary `<bpmn:endEvent>`.",
        "Do not rely on omitted `activityRef` default compensation on throwing end events in this bounded slice."
      ],
      "llm_fix_prompt": "Rewrite compensation node 'throw_end' in process 'throw_compensation_flow' so it no longer uses default compensation from `<bpmn:endEvent>`. Preserve workflow intent, but either use an ordinary end event or remodel the compensation behavior as one bounded transaction-shell compensation path using explicit boundary-to-handler bindings and, when needed, one synchronous targeted throw-compensation end or intermediate event with explicit `activityRef`.",
      "evidence": {
        "detail": "default_compensation_end_event",
        "node_id": "throw_end",
        "process_id": "throw_compensation_flow"
      }
    }
  ]
}
