packages/rust/crates/qianji-bpmn-engine/tests/snapshots/bpmn_default_compensation_intermediate_lint_report.snap
---
source: packages/rust/crates/qianji-bpmn-engine/tests/unit/lint/mod.rs
assertion_line: 35
expression: value
---
{
  "domain": "bpmn",
  "source_id": "invalid-default-compensation-intermediate.bpmn",
  "ok": false,
  "issues": [
    {
      "code": "bpmn.unsupported_compensation_configuration",
      "severity": "error",
      "title": "Default compensation intermediate events are deferred",
      "summary": "Process 'throw_compensation_flow' compensation node 'throw_intermediate' uses `<intermediateThrowEvent><compensateEventDefinition /></intermediateThrowEvent>` without `activityRef`, which implies default compensation and is outside the bounded slice.",
      "why_it_failed": "The current engine does not execute default compensation from throwing intermediate events. It only executes three bounded compensation shapes inside one transaction shell: explicit boundary-to-handler replay during transaction cancel, one synchronous throw-compensation end event with either explicit `activityRef` or omitted `activityRef` default replay, and one synchronous targeted throw-compensation intermediate event with explicit `activityRef`.",
      "repair_guidance": [
        "If transaction rollback is really required, remodel the flow with one bounded transaction cancel path plus explicit compensation boundary-to-handler bindings on the completed activities.",
        "If the flow only needs ordinary progression, remove `<compensateEventDefinition>` and keep normal sequence-flow routing to the next supported node.",
        "Do not rely on omitted `activityRef` default compensation on throwing intermediate events in this bounded slice."
      ],
      "llm_fix_prompt": "Rewrite compensation node 'throw_intermediate' in process 'throw_compensation_flow' so it no longer uses default compensation from `<bpmn:intermediateThrowEvent>`. Preserve workflow intent, but either restore ordinary sequence-flow progression or remodel the compensation behavior as one bounded transaction-shell compensation path using explicit boundary-to-handler bindings and, when needed, one synchronous throw-compensation end event or one synchronous targeted throw-compensation intermediate event.",
      "evidence": {
        "detail": "default_compensation_intermediate_event",
        "node_id": "throw_intermediate",
        "process_id": "throw_compensation_flow"
      }
    }
  ]
}
